objects/Veda_Characteristic__c.object
<CustomObject>
    <fields>
        <fullName>Veda_Data_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Data Block</label>
        <referenceTo>Veda_Data_Block__c</referenceTo>
        <relationshipLabel>Veda Characteristic (Veda Data Block)</relationshipLabel>
        <relationshipName>Veda_Characteristic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>characteristic_Id__c</fullName>
        <label>characteristic Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_Level_Code__c</fullName>
        <label>data Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_Level__c</fullName>
        <label>data Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>key_Characteristic__c</fullName>
        <label>key Characteristic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>variable_Name__c</fullName>
        <label>variable Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Characteristic</label>
    <nameField>
        <label>Characteristic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Characteristic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>